made chosenTask align properly, fixed padding on topbar

--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ the composition */
 .topbar {
   text-align: left;
   flex: 0;
-  padding: 0 0 0 2%;
+  padding: 0.5% 0 0.5% 2%;
   /*border-bottom: 1px solid black;*/
   background-color: var(--topbar);
   color: white;
@@ -525,8 +525,9 @@ toggle between tasks and roadmap */
 
 
 .chosenTask {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-auto-flow: row;
+  grid-row-gap: 10px;
   height: 320px;
   width: 380px;
   align-self: center;
@@ -534,8 +535,7 @@ toggle between tasks and roadmap */
   background-color: white;
   box-shadow: #00000040 0 6px 6px;
   border-radius: 10px;
-  padding: 8px;
-  align-self: center;
+  padding: 15px;
   margin-bottom: 50px;
 }
 
@@ -2409,4 +2409,23 @@ flex: 2 0 60%;
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
+}
+
+.mainTaskSection .mainTaskName .mainTextDesc .mainTaskMainTask .mainTaskSubTask {
+  padding: 0;
+  margin: 0;
+}
+
+.mainTaskName {
+  padding: 0;
+  margin: 0;
+}
+
+.mainTextDesc {
+  padding: 0;
+  margin: 0;
+}
+
+.mainTaskMainTask {
+  font-weight: bold;
 }
